--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-tensorflow
-keras
-opencv-python
+streamlit>=1.32.0
+tensorflow>=2.15.0
+keras>=2.15.0
+opencv-python-headless>=4.8.0
 numpy
 pillow
